<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/discover_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_none" />

        <RadioButton
            android:id="@+id/discover_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_connected" />

        <RadioButton
            android:id="@+id/discover_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_all" />
    </RadioGroup>

    <TextView
        android:id="@+id/currentModeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/current_mode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_apply" />
    </LinearLayout>
</LinearLayout>