<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="429dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tasker_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/tasker_discover_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_none" />

        <Switch
            android:id="@+id/tasker_discover_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_connected"
            android:visibility="visible" />

        <Switch
            android:id="@+id/tasker_discover_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_all" />

    </LinearLayout>

    <Button
        android:id="@+id/tasker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="@string/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>